# vkr

./: .gitignore  Dockerfile  README.md  example.env
app/: __main__.py  settings.py
app/api/routes/: apartments.py  auth.py  events.py
app/objects/: __init__.py  apartment.py  event.py
app/utils/: mongo.py  security.py
mobile-app/: CMakeLists.txt  main.cpp
mobile-app/assets/: assets.qrc
mobile-app/include/: client.h  qmllogic.cpp
mobile-app/sources/: client.cpp
mobile-app/ui/: Main.qml  ShadowPanel.qml  TagPicker.qml
mobile-app/ui/Buttons/: IconButton.qml  RectangleButton.qml
mobile-app/ui/Cards/: Card.qml
mobile-app/ui/Fields/: EmailField.qml  PasswordField.qml
mobile-app/ui/Images/: ColoredSvgImage.qml  ColorlessSvgImage.qml
mobile-app/ui/NavigationBar/: NavigationBar.qml  NavigationBarItem.qml
mobile-app/ui/Pages/: CounterPage.qml  CountersPage.qml  DynamicFormPage.qml  EventsPage.qml  ExportTablePage.qml  HousesPage.qml  LoadingPage.qml  LoginPage.qml  ManageApartmentPage.qml  ManageApartmentsPage.qml  ManageHousePage.qml  ManageRequestsPage.qml  ProfilePage.qml  RegistrationPage.qml
mobile-app/ui/Popups/: DialogPopup.qml
mobile-app/ui/Texts/: CaptionText.qml  RegularText.qml  SubTitleText.qml  TitleText.qml
server/: requirements.txt  test.py
server/app/api/: schemas.py  server.py
server/app/api/routes/: apartments.py  auth.py  counters.py  events.py  houses.py
server/app/objects/: apartment.py  counter.py  event.py  house.py  session.py  user.py
server/app/utils/: tables.py
